# ada

./: .gitignore  CLAUDE.md  Makefile  README.md  config.json.example  config.json.ollama.example  main.py  pyproject.toml
ada/: __init__.py  agent.py  answer.py  config.py  constants.py  conversation.py  entry.py  exceptions.py  formatter.py  listen.py  logger.py  looper.py  model.py  persona.py  personas.py  response.py  tool_box.py  voice.py  voices.py
ada/backends/: __init__.py  base.py  llama_cpp_backend.py  ollama_backend.py
ada/filesystem/: async_file_watcher.py  directory_watcher.py
ada/tools/: __init__.py  base.py  example.py
scripts/: install_llama-cpp-python.source
tests/: test_env.py
tests/ada/: test_agent.py  test_answer.py  test_config.py  test_conversation.py  test_entry.py  test_listen.py  test_model.py  test_persona.py  test_personas.py  test_response.py  test_voices.py
tests/ada/backends/: test_base.py  test_llama_cpp_backend.py  test_ollama_backend.py
tests/ada/tools/: test_base.py  test_example_tool.py
tests/fixtures/config/: example.json  minimum.json  test_runner.json
tests/fixtures/llama/: list.json  simple.json  tool.json  trivial.json
tests/helpers/: fixtures.py
