[project]
name = "ada"
version = "0.0.1"
authors = [
    {name = "Kyle Luzny"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "llama-cpp-python>=0.3.15",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.11.7",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.setuptools]
packages = ["ada"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
