[project]
name = "ada"
version = "0.0.1"
authors = [
    {name = "Kyle Luzny"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "llama-cpp-python>=0.3.15",
    "ollama>=0.4.7",
    "piper-tts>=1.3.0",
    "prompt-toolkit>=3.0.51",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.7",
    "pytest-env>=1.1.5",
    "sounddevice>=0.5.3",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.setuptools]
packages = ["ada"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
env = [
    "APP_ENV = test"
]
